--- a/notebooks/PolarNBA.ipynb
+++ b/notebooks/PolarNBA.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -17,18 +17,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 5,
       "metadata": {
         "id": "lwsAnhcDboYz"
       },
       "outputs": [],
       "source": [
-        "df = pl.read_csv('/home/uvuser/polarsNBA/archive/Games.csv')"
+        "df = pl.read_csv('/home/uvuser/polarsNBA/archive/raw/Games.csv')\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -82,7 +82,7 @@
               "└──────────┴────────────┴────────────┴───────────┴───┴─────────┴───────────┴───────────┴───────────┘"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -93,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -131,7 +131,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -162,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -186,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -238,7 +238,7 @@
               "└───────────┴───────────┴───────────┴───────────┴───┴───────────┴───────────┴───────────┴──────────┘"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
