--- a/notebooks/TEAM_HISTORIES.ipynb
+++ b/notebooks/TEAM_HISTORIES.ipynb
@@ -1,6 +1,17 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Previamente creamos el kernel para este proyecto\n",
+        "uv run python -m ipykernel install \\\n",
+        "  --user \\\n",
+        "  --name polarsnba \\\n",
+        "  --display-name \"Python (polarsnba)\""
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
